--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
+    "mammoth": "^1.8.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
