Try fixing this error: `Build Error: Module not found: Can't resolve 'fs

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
-    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -66,7 +66,7 @@
     "@next/eslint-plugin-next": "^15.5.4",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
-    "@types/pdf-parse": "^1.1.4",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9.36.0",
